# deploy_file

./: README.md
file_analyzer/: Cargo.toml  spin.toml
file_analyzer/src/: lib.rs
file_analyzer/stream_csv/: Cargo.toml  spin.toml
file_analyzer/stream_csv/src/: lib.rs
file_analyzer/upload_csv/: Cargo.toml  spin.toml
file_analyzer/upload_csv/src/: lib.rs
