[package]
name = "stream-csv"
authors = ["dodoextinct <yashkmkrishan@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
csv = "1.3.0"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
url = "2.4.1"

[workspace]
